[package]
name = "live-tokensell"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
num-derive = "~0.3"
num-traits = "~0.2"
solana-program = "~1.9.5"
spl-token = { version="~3.2.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = "1.0.3"
thiserror = "~1.0"
borsh = "~0.9.1"

[lib]
crate-type = ["cdylib", "lib"]
